commit frontend julia

--- a/smoos-webapp/src/app/backoffice/components/register-obra/register-obra.component.html
+++ b/smoos-webapp/src/app/backoffice/components/register-obra/register-obra.component.html
@@ -1,1 +1,223 @@
-<p>register-obra works!</p>
+<app-header></app-header>
+        <h1>Cadastro de obras</h1>
+        <section class="categorias">
+            <div class="box">
+                <a style="padding-left: 5px" href="#" class="box-content">
+                    <img src="assets\icons\movie-icon.svg">
+                    <br>
+                    <p>Filme</p>
+                </a>
+            </div>
+            <div class="box">
+                <a href="#" class="box-content">
+                    <img style="padding-left: 3px" src="assets\icons\album-icon.svg">
+                    <br>
+                    <p>Álbum</p>
+                </a>
+            </div>
+            <div class="box">
+                <a href="#" class="box-content">
+                    <img style="padding-left: 3px" src="assets\icons\music-icon.svg">
+                    <br>
+                    <p>Música</p>
+                </a>
+            </div>
+            <div class="box">
+                <a style="padding-left: 3px" href="#" class="box-content">
+                    <img src="assets\icons\book-icon.svg">
+                    <br>
+                    <p style="padding-left: 4px">Livro</p>
+                </a>
+            </div>
+        </section>
+        <section class="campos-padrao">
+                <form>
+                    <div class="campos">
+                        <label class="label" for="name">Nome:*</label> <br>
+                        <input style="width: 268px;" class="input" id="name" name="name" type="text" required>
+                    </div>
+                    <!-- <div class="campos">
+                        <label class="label" for="release-date">Data de lançamento:*</label> <br>
+                        <input style="width: 230px;" class="input" id="release-date" name="release-date" type="date" required>
+                    </div> -->
+                    <div class="campos">
+                        <label class="label" for="release-date">Data de Lançamento:*</label>
+                        <p-calendar style="width: 230px;" class="input" inputId="release-date" [(ngModel)]="date1"></p-calendar>
+                    </div>
+                </form>
+        </section>
+        <h1 style="padding-left: 270px; padding-top: 30px;">Campos filme</h1>
+        <section class="campos-filme">
+                <form>
+                    <div class="campos">
+                        <p>Gênero:*</p>
+                        <p-multiSelect [options]="genres" [(ngModel)]="selectedGenres" defaultLabel="Selecione um gênero:" optionLabel="genre"
+	display="chip"></p-multiSelect>
+                    </div>
+
+                    <div class="campos">
+                        <label class="label" for="genre">Gênero:*</label><br>
+                        <input id="action" name="action" type="checkbox"> <span> Ação </span>
+                        <input id="adventure" name="adventure" type="checkbox"> <span> Aventura </span>
+                        <input id="fantasy" name="fantasy" type="checkbox"> <span> Fantasia </span><br>
+                        <input id="scifi" name="scifi" type="checkbox"> <span> Sci-Fi </span>
+                        <input id="drama" name="drama" type="checkbox"> <span> Drama </span>
+                        <input id="biography" name="biography" type="checkbox"> <span> Biografia </span><br>
+                        <input id="romance" name="romance" type="checkbox"> <span> Romance </span>
+                        <input id="musical" name="musical" type="checkbox"> <span> Musical </span>
+                        <input id="comedy" name="comedy" type="checkbox"> <span> Comédia </span><br>
+                        <input id="horror" name="horror" type="checkbox"> <span> Terror </span>
+                        <input id="romcom" name="romcom" type="checkbox"> <span> Comédia Romântica </span>
+                    </div>
+                    <div class="campos">
+                        <label class="label" for="duration">Duração:*</label> <br>
+                        <input style="width: 230px;" class="duration-input" id="duration" name="duration" type="text" required>
+                    </div>
+                    <div class="campos">
+                        <label class="label" for="description">Sinopse:*</label> <br>
+                        <textarea style="width: 600px; height: 5em; vertical-align: text-top; box-sizing: border-box; border: 2px solid #fff; resize: vertical" class="input" id="description" name="description" type="text" required></textarea>
+                    </div>
+                    <div class="campos">
+                        <label class="label" for="cast">Cast:*</label> <br>
+                        <input style="width: 600px;" class="cast-input" id="cast" name="cast" type="text" required>
+                    </div>
+                    <div class="campos">
+                        <label class="label" for="country">País:*</label> <br>
+                        <input style="width: 268px;" class="input" id="country" name="country" type="text" required>
+                    </div>
+                    <div class="campos" style="padding-left: 50px">
+                        <label class="label" for="photo">Foto:*</label> <br>
+                        <input style="width: 268px;" class="input" id="photo" name="photo" type="file" required>
+                    </div>
+                    <div style="padding-left: 455px;">
+                        <button id="button" type="submit">Cadastrar Obra</button>
+                    </div>
+                </form>
+        </section>
+        <h1 style="padding-left: 270px; padding-top: 30px;">Campos album</h1>
+        <section class="campos-album">
+            <form>
+                <div class="campos">
+                    <label class="label" for="album-singer">Cantor(a):*</label> <br>
+                    <input style="width: 268px;" class="singer-input" id="album-singer" name="album-singer" type="text" required>
+                </div>
+                <div class="campos" style="padding-left: 55px;">
+                    <label class="label" for="duration">Duração:*</label> <br>
+                    <input style="width: 230px;" class="duration-input" id="duration" name="duration" type="text" required>
+                </div>
+                <div class="campos">
+                    <label class="label" for="genre">Gênero:*</label><br>
+                    <input id="action" name="action" type="checkbox"> <span> Ação </span>
+                    <input id="adventure" name="adventure" type="checkbox"> <span> Aventura </span>
+                    <input id="fantasy" name="fantasy" type="checkbox"> <span> Fantasia </span><br>
+                    <input id="scifi" name="scifi" type="checkbox"> <span> Sci-Fi </span>
+                    <input id="drama" name="drama" type="checkbox"> <span> Drama </span>
+                    <input id="biography" name="biography" type="checkbox"> <span> Biografia </span><br>
+                    <input id="romance" name="romance" type="checkbox"> <span> Romance </span>
+                    <input id="musical" name="musical" type="checkbox"> <span> Musical </span>
+                    <input id="comedy" name="comedy" type="checkbox"> <span> Comédia </span><br>
+                    <input id="horror" name="horror" type="checkbox"> <span> Terror </span>
+                    <input id="romcom" name="romcom" type="checkbox"> <span> Comédia Romântica </span>
+                </div>
+                <div class="campos" style="padding-left: 50px">
+                    <label class="label" for="photo">Foto:*</label> <br>
+                    <input style="width: 268px;" class="input" id="photo" name="photo" type="file" required>
+                </div>
+                <div style="padding-left: 430px;">
+                    <button id="button" type="submit">Cadastrar Obra</button>
+                </div>
+            </form>
+        </section>
+        <h1 style="padding-left: 270px; padding-top: 30px;">Campos livro</h1>
+        <section class="campos-livro">
+            <form>
+                <div class="campos">
+                    <label class="label" for="author">Autor(a):*</label> <br>
+                    <input style="width: 268px;" class="author-input" id="author" name="album-singer" type="text" required>
+                </div>
+                <div class="campos" style="padding-left: 55px;">
+                    <label class="label" for="page-count">Quantidade de páginas:*</label> <br>
+                    <input style="width: 230px;" class="page-count-input" id="page-count" name="page-count" type="text" required>
+                </div>
+                <div class="campos">
+                    <label class="label" for="description">Sinopse:*</label> <br>
+                    <textarea style="width: 575px; height: 5em; vertical-align: text-top; box-sizing: border-box; border: 2px solid #fff; resize: vertical" class="input" id="description" name="description" type="text" required></textarea>
+                </div>
+                <div class="campos">
+                    <label class="label" for="genre">Gênero:*</label><br>
+                    <input id="action" name="action" type="checkbox"> <span> Ação </span>
+                    <input id="adventure" name="adventure" type="checkbox"> <span> Aventura </span>
+                    <input id="fantasy" name="fantasy" type="checkbox"> <span> Fantasia </span><br>
+                    <input id="scifi" name="scifi" type="checkbox"> <span> Sci-Fi </span>
+                    <input id="drama" name="drama" type="checkbox"> <span> Drama </span>
+                    <input id="biography" name="biography" type="checkbox"> <span> Biografia </span><br>
+                    <input id="romance" name="romance" type="checkbox"> <span> Romance </span>
+                    <input id="musical" name="musical" type="checkbox"> <span> Musical </span>
+                    <input id="comedy" name="comedy" type="checkbox"> <span> Comédia </span><br>
+                    <input id="horror" name="horror" type="checkbox"> <span> Terror </span>
+                    <input id="romcom" name="romcom" type="checkbox"> <span> Comédia Romântica </span>
+                </div>
+                <div class="campos" style="padding-left: 45px;">
+                    <label class="label" for="publisher">Editora:*</label> <br>
+                    <input style="width: 268px;" class="input" id="publisher" name="publisher" type="text" required>
+                </div>
+                <div class="campos">
+                    <label class="label" for="photo">Foto:*</label> <br>
+                    <input style="width: 268px;" class="input" id="photo" name="photo" type="file" required>
+                </div>
+                <div style="padding-left: 123px; padding-top: 50px;">
+                    <button id="button" type="submit">Cadastrar Obra</button>
+                </div>
+            </form>
+        </section>
+        <h1 style="padding-left: 270px; padding-top: 30px;">Campos música</h1>
+        <section class="campos-musica">
+            <form>
+                <div class="campos">
+                    <label class="label" for="song-singer">Cantor(a):*</label> <br>
+                    <input style="width: 268px;" class="singer-input" id="song-singer" name="song-singer" type="text" required>
+                </div>
+                <div class="campos" style="padding-left: 55px;">
+                    <label class="label" for="duration">Duração:*</label> <br>
+                    <input style="width: 230px;" class="duration-input" id="duration" name="duration" type="text" required>
+                </div>
+                <div class="campos">
+                    <label class="label" for="genre">Gênero:*</label><br>
+                    <input id="action" name="action" type="checkbox"> <span> Ação </span>
+                    <input id="adventure" name="adventure" type="checkbox"> <span> Aventura </span>
+                    <input id="fantasy" name="fantasy" type="checkbox"> <span> Fantasia </span><br>
+                    <input id="scifi" name="scifi" type="checkbox"> <span> Sci-Fi </span>
+                    <input id="drama" name="drama" type="checkbox"> <span> Drama </span>
+                    <input id="biography" name="biography" type="checkbox"> <span> Biografia </span><br>
+                    <input id="romance" name="romance" type="checkbox"> <span> Romance </span>
+                    <input id="musical" name="musical" type="checkbox"> <span> Musical </span>
+                    <input id="comedy" name="comedy" type="checkbox"> <span> Comédia </span><br>
+                    <input id="horror" name="horror" type="checkbox"> <span> Terror </span>
+                    <input id="romcom" name="romcom" type="checkbox"> <span> Comédia Romântica </span>
+                </div>
+                <div class="campos" style="padding-left: 50px">
+                    <label class="label" for="photo">Foto:*</label> <br>
+                    <input style="width: 268px;" class="input" id="photo" name="photo" type="file" required>
+                </div>
+                <div class="campos">
+                    <label class="label" for="pertenceAlbum">Pertence à algum álbum:*</label> <br>
+                    <!-- <div class="p-field-radiobutton">
+                        <p-radioButton name="pertenceAlbum" value="sim" [(ngModel)]="pertenceAlbum" inputId="sim"></p-radioButton>
+                        <label class="label" for="sim">Sim</label>
+                    </div>
+                    <div class="p-field-radiobutton">
+                        <p-radioButton name="pertence-album" value="não" [(ngModel)]="pertenceAlbum" inputId="não"></p-radioButton>
+                        <label class="label" for="não">Não</label>
+                    </div> -->
+                    <input id="yes" name="yes" type="radio"> <span> Sim </span>
+                    <input id="no" name="no" type="radio"> <span> Não </span>
+                </div>
+                <div class="campos" style="padding-left: 75px;">
+                    <label class="label" for="album">Album(a):*</label> <br>
+                    <input style="width: 268px;" class="album-input" id="album" name="album" type="text" required>
+                </div>
+                <div style="padding-left: 430px;">
+                    <button id="button" type="submit">Cadastrar Obra</button>
+                </div>
+            </form>
+        </section>
