--- a/smoos-webapp/src/app/backoffice/components/register-artist/register-artist.component.css
+++ b/smoos-webapp/src/app/backoffice/components/register-artist/register-artist.component.css
@@ -92,6 +92,10 @@ form div{
     font-size: 16px;
     color: #fff;
 }
+.input:focus{
+    box-shadow: none;
+    outline: 0;
+}
 #button{
     position: relative;
     display: block;
