--- a/smoos-webapp/src/app/backoffice/components/sign-up-page/sign-up-page.component.css
+++ b/smoos-webapp/src/app/backoffice/components/sign-up-page/sign-up-page.component.css
@@ -79,7 +79,7 @@ h1 {
     font-weight: medium;
     font-size: 20px;
     color: #161618;
-    background-image:url(../../assets/icons/eye-password-icon.svg); 
+    /*background-image:url(../../assets/icons/eye-password-icon.svg); */
     background-repeat: no-repeat; 
     background-position: 285px;
 }
