Ajustes no cadastro de obra

--- a/smoos-webapp/src/app/backoffice/components/register-obra/register-obra.component.html
+++ b/smoos-webapp/src/app/backoffice/components/register-obra/register-obra.component.html
@@ -2,99 +2,39 @@
         <h1>Cadastro de obras</h1>
         <section class="categorias">
             <div class="box">
-                <a style="padding-left: 5px" href="#" class="box-content">
+                <div style="padding-left: 5px" (click)="selectMovie()" class="box-content">
                     <img src="assets\icons\movie-icon.svg">
                     <br>
                     <p>Filme</p>
-                </a>
+                </div>
             </div>
-            <div class="box">
+            <!-- <div class="box">
                 <a href="#" class="box-content">
                     <img style="padding-left: 3px" src="assets\icons\album-icon.svg">
                     <br>
                     <p>Álbum</p>
                 </a>
-            </div>
-            <div class="box">
+            </div> -->
+            <!-- <div class="box">
                 <a href="#" class="box-content">
                     <img style="padding-left: 3px" src="assets\icons\music-icon.svg">
                     <br>
                     <p>Música</p>
                 </a>
-            </div>
+            </div> -->
             <div class="box">
-                <a style="padding-left: 3px" href="#" class="box-content">
+                <div style="padding-left: 3px"  (click)="selectBook()" class="box-content">
                     <img src="assets\icons\book-icon.svg">
                     <br>
                     <p style="padding-left: 4px">Livro</p>
-                </a>
+                </div>
             </div>
         </section>
-        <section class="campos-padrao">
-                <form>
-                    <div class="campos">
-                        <label class="label" for="name">Nome:*</label> <br>
-                        <input style="width: 268px;" class="input" id="name" name="name" type="text" required>
-                    </div>
-                    <!-- <div class="campos">
-                        <label class="label" for="release-date">Data de lançamento:*</label> <br>
-                        <input style="width: 230px;" class="input" id="release-date" name="release-date" type="date" required>
-                    </div> -->
-                    <div class="campos">
-                        <label class="label" for="release-date">Data de Lançamento:*</label>
-                        <p-calendar style="width: 230px;" class="input" inputId="release-date" [(ngModel)]="date1"></p-calendar>
-                    </div>
-                </form>
+        <section  class="campos-filme" *ngIf="option == 'movie'">
+            <app-register-movie ></app-register-movie>
         </section>
-        <h1 style="padding-left: 270px; padding-top: 30px;">Campos filme</h1>
-        <section class="campos-filme">
-                <form>
-                    <div class="campos">
-                        <p>Gênero:*</p>
-                        <p-multiSelect [options]="genres" [(ngModel)]="selectedGenres" defaultLabel="Selecione um gênero:" optionLabel="genre"
-	display="chip"></p-multiSelect>
-                    </div>
-
-                    <div class="campos">
-                        <label class="label" for="genre">Gênero:*</label><br>
-                        <input id="action" name="action" type="checkbox"> <span> Ação </span>
-                        <input id="adventure" name="adventure" type="checkbox"> <span> Aventura </span>
-                        <input id="fantasy" name="fantasy" type="checkbox"> <span> Fantasia </span><br>
-                        <input id="scifi" name="scifi" type="checkbox"> <span> Sci-Fi </span>
-                        <input id="drama" name="drama" type="checkbox"> <span> Drama </span>
-                        <input id="biography" name="biography" type="checkbox"> <span> Biografia </span><br>
-                        <input id="romance" name="romance" type="checkbox"> <span> Romance </span>
-                        <input id="musical" name="musical" type="checkbox"> <span> Musical </span>
-                        <input id="comedy" name="comedy" type="checkbox"> <span> Comédia </span><br>
-                        <input id="horror" name="horror" type="checkbox"> <span> Terror </span>
-                        <input id="romcom" name="romcom" type="checkbox"> <span> Comédia Romântica </span>
-                    </div>
-                    <div class="campos">
-                        <label class="label" for="duration">Duração:*</label> <br>
-                        <input style="width: 230px;" class="duration-input" id="duration" name="duration" type="text" required>
-                    </div>
-                    <div class="campos">
-                        <label class="label" for="description">Sinopse:*</label> <br>
-                        <textarea style="width: 600px; height: 5em; vertical-align: text-top; box-sizing: border-box; border: 2px solid #fff; resize: vertical" class="input" id="description" name="description" type="text" required></textarea>
-                    </div>
-                    <div class="campos">
-                        <label class="label" for="cast">Cast:*</label> <br>
-                        <input style="width: 600px;" class="cast-input" id="cast" name="cast" type="text" required>
-                    </div>
-                    <div class="campos">
-                        <label class="label" for="country">País:*</label> <br>
-                        <input style="width: 268px;" class="input" id="country" name="country" type="text" required>
-                    </div>
-                    <div class="campos" style="padding-left: 50px">
-                        <label class="label" for="photo">Foto:*</label> <br>
-                        <input style="width: 268px;" class="input" id="photo" name="photo" type="file" required>
-                    </div>
-                    <div style="padding-left: 455px;">
-                        <button id="button" type="submit">Cadastrar Obra</button>
-                    </div>
-                </form>
-        </section>
-        <h1 style="padding-left: 270px; padding-top: 30px;">Campos album</h1>
+               
+        <!-- <h1 style="padding-left: 270px; padding-top: 30px;">Campos album</h1>
         <section class="campos-album">
             <form>
                 <div class="campos">
@@ -102,7 +42,6 @@
                     <select style="width: 268px;" class="singer-input" id="album-singer" name="album-singer">
                         <option *ngFor="artist in artists" value="id">{{artist.name}}</option>
                     </select>
-                    <!-- <input style="width: 268px;" class="singer-input" id="album-singer" name="album-singer" type="text" required> -->
                 </div>
                 <div class="campos" style="padding-left: 55px;">
                     <label class="label" for="duration">Duração:*</label> <br>
@@ -130,50 +69,9 @@
                     <button id="button" type="submit">Cadastrar Obra</button>
                 </div>
             </form>
-        </section>
-        <h1 style="padding-left: 270px; padding-top: 30px;">Campos livro</h1>
-        <section class="campos-livro">
-            <form>
-                <div class="campos">
-                    <label class="label" for="author">Autor(a):*</label> <br>
-                    <select style="width: 268px;"style="width: 268px;" class="author-input" id="author">
-                        <option *ngFor="artist in artists" value="id">{{artist.name}}</option>
-                    </select>
-                </div>
-                <div class="campos" style="padding-left: 55px;">
-                    <label class="label" for="page-count">Quantidade de páginas:*</label> <br>
-                    <input style="width: 230px;" class="page-count-input" id="page-count" name="page-count" type="text" required>
-                </div>
-                <div class="campos">
-                    <label class="label" for="description">Sinopse:*</label> <br>
-                    <textarea style="width: 575px; height: 5em; vertical-align: text-top; box-sizing: border-box; border: 2px solid #fff; resize: vertical" class="input" id="description" name="description" type="text" required></textarea>
-                </div>
-                <div class="campos">
-                    <label class="label" for="genre">Gênero:*</label><br>
-                    <input id="action" name="action" type="checkbox"> <span> Ação </span>
-                    <input id="adventure" name="adventure" type="checkbox"> <span> Aventura </span>
-                    <input id="fantasy" name="fantasy" type="checkbox"> <span> Fantasia </span><br>
-                    <input id="scifi" name="scifi" type="checkbox"> <span> Sci-Fi </span>
-                    <input id="drama" name="drama" type="checkbox"> <span> Drama </span>
-                    <input id="biography" name="biography" type="checkbox"> <span> Biografia </span><br>
-                    <input id="romance" name="romance" type="checkbox"> <span> Romance </span>
-                    <input id="musical" name="musical" type="checkbox"> <span> Musical </span>
-                    <input id="comedy" name="comedy" type="checkbox"> <span> Comédia </span><br>
-                    <input id="horror" name="horror" type="checkbox"> <span> Terror </span>
-                    <input id="romcom" name="romcom" type="checkbox"> <span> Comédia Romântica </span>
-                </div>
-                <div class="campos" style="padding-left: 45px;">
-                    <label class="label" for="publisher">Editora:*</label> <br>
-                    <input style="width: 268px;" class="input" id="publisher" name="publisher" type="text" required>
-                </div>
-                <div class="campos">
-                    <label class="label" for="photo">Foto:*</label> <br>
-                    <input style="width: 268px;" class="input" id="photo" name="photo" type="file" required>
-                </div>
-                <div style="padding-left: 123px; padding-top: 50px;">
-                    <button id="button" type="submit">Cadastrar Obra</button>
-                </div>
-            </form>
+        </section> -->
+        <section class="campos-livro" *ngIf="option == 'book'">
+            <app-register-book></app-register-book>
         </section>
         <!-- <h1 style="padding-left: 270px; padding-top: 30px;">Campos música</h1>
         <section class="campos-musica">
