--- a/smoos-webapp/src/app/backoffice/components/suggestions-user/suggestions-user.component.html
+++ b/smoos-webapp/src/app/backoffice/components/suggestions-user/suggestions-user.component.html
@@ -14,7 +14,7 @@
             <input style="width: 268px;"  formControlName="name" class="input" id="name" name="name" type="text" required>
         </div>
         <div style="padding-left: 105px; padding-top: 30px; color: #BF62EA;">
-            <button id="button" type="submit" >Cadastrar Sugestão</button>
+            <button id="button" type="submit" (click)="save()" >Cadastrar Sugestão</button>
         </div>
     </div>
 </form>
